--- a/style.css
+++ b/style.css
@@ -2,4 +2,28 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+ 
 }
+
+header{
+    text-align: center;
+}
+
+#featured-property{
+    text-align: center;
+}
+
+.paragr{
+  width: 50%;
+  margin: auto;
+}
+
+
+
+.foot{
+  float: left;
+  text-align: center;
+  background-color: grey;
+  width: 25%;
+}
+
